--- a/DocumentManagerUI/Pages/DocKeeper/Documents.razor
+++ b/DocumentManagerUI/Pages/DocKeeper/Documents.razor
@@ -6,7 +6,7 @@
 @using System.IO;
 @using System.Text.Json;
 
-<EditForm Model="@document" OnValidSubmit="@HandleValidSubmit" class="row g-3 px-2 py-2">
+<EditForm Model="@document" OnValidSubmit="@HandleValidSubmit" class="inForm">
     <DataAnnotationsValidator />
     <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
     <div class="col-10">
