--- a/DocumentManagerUI/Pages/DocKeeper/Documents.razor.css
+++ b/DocumentManagerUI/Pages/DocKeeper/Documents.razor.css
@@ -1,10 +1,6 @@
-﻿.text {
+﻿.inForm {
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    height: 50px;
-    width: 600px;
-    margin-left: 66px;
 }
 .line {
     color: #495057;
