--- a/DocumentManagerUI/Pages/DocKeeper/DocumantKepper.razor
+++ b/DocumentManagerUI/Pages/DocKeeper/DocumantKepper.razor
@@ -4,13 +4,13 @@
         <Documents IdDocument="@IdDocument" BaseUri="@BaseUri" />
     </TabPage>
     <TabPage Text="Pictures">
-        <Counter></Counter>
+    
     </TabPage>
     <TabPage Text="Videos">
-        <Pict></Pict>
-    </TabPage>
+    
+        </TabPage>
     <TabPage Text="Files">
-
+        <File/>
     </TabPage>
 </TabControl>
 
