--- a/DocumentManagerUI/Pages/Index.razor
+++ b/DocumentManagerUI/Pages/Index.razor
@@ -6,7 +6,10 @@
 @page "/"
 
 
-<DocumantKepper IdDocument="@IdDocument" BaseUri="@BaseUri" />
+<div class="main">
+    <DocumantKepper IdDocument="@IdDocument" BaseUri="@BaseUri" />
+</div>
+
 
 @code{
 
