--- a/DocumentManagerUI/_Imports.razor
+++ b/DocumentManagerUI/_Imports.razor
@@ -13,3 +13,4 @@
 @using ModelDomain
 @using DocumentManagerUI.Pages.DocKeeper
 @using DocumentManager.API.ErrorResponses
+@using DocumentManager.API.ResponseFile
