--- a/DocumentManagerUI/Pages/Index.razor.css
+++ b/DocumentManagerUI/Pages/Index.razor.css
@@ -1,5 +1,5 @@
 ﻿.main {
-    height:auto;
-    width: auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 500px;
+    width: 1000px;
+    margin: 15%;
 }
