--- a/DocumentManagerUI/Pages/DocKeeper/DocumantKepper.razor
+++ b/DocumentManagerUI/Pages/DocKeeper/DocumantKepper.razor
@@ -4,7 +4,7 @@
         <Documents IdDocument="@IdDocument" BaseUri="@BaseUri" />
     </TabPage>
     <TabPage Text="Pictures">
-    
+        <Popit></Popit>
     </TabPage>
     <TabPage Text="Videos">
     
