--- a/DocumentManagerUI/Pages/DocKeeper/File.razor
+++ b/DocumentManagerUI/Pages/DocKeeper/File.razor
@@ -7,13 +7,16 @@
 
 <FileEdit Changed="@OnChanged" Written="@OnWritten" Progressed="@OnProgressed" />
 
-
-<img src="@imageURL">
+@foreach (var file in res)
+{
+    <img src="@PopulateImageFromStream(file)" height="200px" width="200px">
+}
 
 @code {
     string fileContent;
     string imageURL = "";
     string payload;
+    List<FileInfoResponse> res = new();
 
     async Task OnChanged(FileChangedEventArgs e)
     {
@@ -24,9 +27,12 @@
                 var stream = new MemoryStream();
                 await file.WriteToStreamAsync(stream);
                 byte[] byteArray = stream.ToArray();
-                var response = new ResponseFile(byteArray.ToString(), byteArray);
-                var status = await Http.PostAsJsonAsync("https://localhost:44339/api/FileGridFs", response);
-                payload = await status.GetPayload();
+                var res = new FileObjectResponse(Guid.Empty, byteArray);
+                var response = new FileInfoResponse();
+                response.FileObj = res;
+                var status = await Http.PostAsJsonAsync("https://localhost:44339/api/FileManagers", response);
+                //payload = await status.GetPayload();
+                var i = 0;
             }
         }
         catch (Exception exc)
@@ -51,17 +57,18 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await PopulateImageFromStream();
+       res = await GetFiles();
     }
 
-
-    private async Task<string> PopulateImageFromStream()
+    private async Task<List<FileInfoResponse>> GetFiles()
     {
-        var response = await Http.GetAsync("https://localhost:44339/api/FileGridFs/" + this.payload);
-        var payload = await response.GetPayload();
-        ResponseFile file = JsonSerializer.Deserialize<ResponseFile>(payload);
-        var b64String = Convert.ToBase64String(file.Content);
-        imageURL = "data:image/png;base64," + b64String;
+        return await Http.GetFromJsonAsync<List<FileInfoResponse>>("https://localhost:44339/api/FileManagers");
+    }
+
+    private string PopulateImageFromStream(FileInfoResponse file)
+    {
+        //StateHasChanged();
+        var imageURL = $"data:image/jpg;base64,{Convert.ToBase64String(file.FileObj.File)}";
         return imageURL;
     }
 }
