--- a/DocumentManagerUI/Pages/DocumantKepper.razor
+++ b/DocumentManagerUI/Pages/DocumantKepper.razor
@@ -4,7 +4,7 @@
         <Documents IdDocument="@IdDocument" BaseUri="@BaseUri" />
     </TabPage>
     <TabPage Text="Pictures">
-        <Popit></Popit>
+        <FileKeeper></FileKeeper>
     </TabPage>
     <TabPage Text="Videos">
     
