--- a/DocumentManagerUI/_Imports.razor
+++ b/DocumentManagerUI/_Imports.razor
@@ -10,5 +10,4 @@
 @using DocumentManagerUI.Pages
 @using DocumentManagerUI.Shared
 @using Blazorise
-@using ModelDomain
-@using DocumentManagerUI.Pages.DocKeeper
+@using DocumentManagerUI.Pages
