--- a/DocumentManagerUI/Pages/Documents.razor
+++ b/DocumentManagerUI/Pages/Documents.razor
@@ -1,10 +1,10 @@
-﻿@using ModelDomain
-@using System.Net.Http
+﻿@using System.Net.Http
 @inject HttpClient Http
 @using System.Net.Http.Json
 @using System.Threading.Tasks
 @using System.IO;
 @using System.Text.Json;
+@using DocumentManagerUI.ModelResponse
 
 <EditForm Model="@document" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
