--- a/DocumentManagerUI/Pages/Index.razor
+++ b/DocumentManagerUI/Pages/Index.razor
@@ -1,5 +1,4 @@
-﻿@using ModelDomain
-@using System.Net.Http
+﻿@using System.Net.Http
 @inject HttpClient Http
 @using System.Net.Http.Json
 @using System.Threading.Tasks
