--- a/DocumentManagerUI/Pages/DocumantKepper.razor
+++ b/DocumentManagerUI/Pages/DocumantKepper.razor
@@ -4,13 +4,13 @@
         <Documents IdDocument="@IdDocument" BaseUri="@BaseUri" />
     </TabPage>
     <TabPage Text="Pictures">
-        <FileKeeper></FileKeeper>
+
     </TabPage>
     <TabPage Text="Videos">
-    
+        <FileKeeper></FileKeeper>    
         </TabPage>
     <TabPage Text="Files">
-
+        <Files></Files>
     </TabPage>
 </TabControl>
 
