--- a/DocumentManagerUI/Shared/TabControl.razor
+++ b/DocumentManagerUI/Shared/TabControl.razor
@@ -17,8 +17,9 @@
     </aside>
     <main class="conteinerPage">
         <header class="header">
-             
+            
         </header>
+        <div class="m-11" />
         <div class="childPage">
             <CascadingValue Value="this">
                 @ChildContent
