--- a/DocumentManagerUI/_Imports.razor
+++ b/DocumentManagerUI/_Imports.razor
@@ -10,4 +10,5 @@
 @using DocumentManagerUI.Pages
 @using DocumentManagerUI.Shared
 @using Blazorise
-@using DocumentManagerUI.Pages
+@using DocumentManagerUI.Pages.Document
+@using DocumentManagerUI.Pages.File
