--- a/DocumentManagerUI/Pages/File/EditCreateForm.razor
+++ b/DocumentManagerUI/Pages/File/EditCreateForm.razor
@@ -7,6 +7,7 @@
 @inject HttpClient Http
 @using System.Net.Http.Json
 @using Microsoft.JSInterop
+@inject IJSRuntime jsRuntime
 
 
 <EditForm Model="@File" OnValidSubmit="@HandleValidSubmit">
@@ -67,24 +68,8 @@
         </div>
     </div>
     
-    <div class="col-md-12 py-2 Foorm m-b m-t-10">
+    <div id="Bu1" class="col-md-12 py-2 Foorm m-b m-t-10">
         <FileEdit Changed="@OnChanged" />
-    </div>
-    
-    <div class="col-md-12 py-2 Foorm m-b m-t-10">
-        <FileEdit Changed="@OnChanged" />
-        <div class="m-t-10">
-            <button type="submit" class="btn btn-outline-danger">Cancel</button>
-        </div>
-    </div>
-    
-    <div class="col-md-12 Foorm m-t-10 m-l-10">
-        <div class="col-md-3 Foorm">
-            <a download="" href="" type="button" class="btn btn-outline-danger">Dowanload</a>
-        </div>
-        <div class="col-md-3 Foorm">
-            <a href="" type="button" class="btn btn-outline-danger">Open</a>
-        </div>
     </div>
 
     <div class="col-3 subButtom Foorm offset-md-8 py-2 marginSave">
@@ -131,7 +116,13 @@
                 throw new Exception("Mutable object not found");
             }
             File.FileObject = new FileObjectResponse(file.Name, ms.ToArray(), file.Type);
+            UpdateTitle();
 
         }
+    }
+
+    private async void UpdateTitle()
+    {
+        await jsRuntime.InvokeAsync<object>("rebutton");
     }
 }
