--- a/DocumentManagerUI/Pages/File/EditCreateForm.razor
+++ b/DocumentManagerUI/Pages/File/EditCreateForm.razor
@@ -10,7 +10,7 @@
 @inject IJSRuntime jsRuntime
 
 
-<EditForm Model="@File" OnValidSubmit="@HandleValidSubmit">
+<EditForm Model="@File" OnValidSubmit="@PutPostFileObject">
     <DataAnnotationsValidator />
     <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
     <div class="col-12 Foorm">
@@ -68,9 +68,32 @@
         </div>
     </div>
     
-    <div id="Bu1" class="col-md-12 py-2 Foorm m-b m-t-10">
-        <FileEdit Changed="@OnChanged" />
-    </div>
+    @if (param == 0)
+    {
+        <div id="Bu" class="col-md-12 Foorm m-t-10 m-l-10">
+            <div class="col-md-3 Foorm">
+                <a download="@File.FileObject.Name" href="@($"data:{File.FileObject.FileTypeMime};base64,{Convert.ToBase64String(File.FileObject.File)}")" type="button" class="btn btn-outline-dark">Dowanload</a>
+            </div>
+            <div class="col-md-5 Foorm">
+                <button type="button" @onclick="@(() => { param = 1; })" class="btn btn-outline-dark">Overwrite file</button>
+            </div>
+        </div>
+    }
+    else if (param == 1)
+    {
+        <div id="Bu" class="col-md-12 py-2 Foorm m-b m-t-10">
+            <FileEdit Changed="@OnChange"/>
+            <div class="m-t-10">
+                <button @onclick="@(() => { param = 0; })" type="submit" class="btn btn-outline-danger">Cancel</button>
+            </div>
+        </div>
+    }
+    else
+    {
+        <div id="Bu" class="col-md-12 py-2 Foorm m-b m-t-10">
+            <FileEdit Changed="@OnChange" />
+        </div>
+    }
 
     <div class="col-3 subButtom Foorm offset-md-8 py-2 marginSave">
         <button type="submit" class="btn btn-outline-dark">Save</button>
@@ -85,7 +108,15 @@
     [Parameter]
     public FileResponse File { get; set; }
 
-    //FileObjectResponse payloadFile = null;
+    int param = 2;
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (File.FileObject == null)
+        {
+            param = 1;
+        }
+    }
 
     private async Task HandleValidSubmit()
     {
@@ -93,7 +124,7 @@
         try
         {
             File.LastUpDate = DateTime.Now;
-            var response = await Http.PutAsJsonAsync(uri, File);
+            var response = await Http.PostAsJsonAsync(uri, File);
         }
         catch (Exception ex)
         {
@@ -101,7 +132,7 @@
         }
     }
 
-    protected async Task OnChanged(FileChangedEventArgs e)
+    protected async Task OnChange(FileChangedEventArgs e)
     {
         long maxFileSize = 1024 * 1024 * 100;
 
@@ -111,18 +142,59 @@
             using var ms = new MemoryStream();
             await fileContent.CopyToAsync(ms);
 
+           
+            File.FileObject = new FileObjectResponse(file.Name, ms.ToArray(), file.Type);
+
             if (File.FileObject == null)
             {
                 throw new Exception("Mutable object not found");
             }
-            File.FileObject = new FileObjectResponse(file.Name, ms.ToArray(), file.Type);
-            UpdateTitle();
-
+            //UpdateTitle();
+            param = 0;
+            StateHasChanged();
         }
     }
 
-    private async void UpdateTitle()
+    private async Task PutPostFileObject()
     {
-        await jsRuntime.InvokeAsync<object>("rebutton");
+        if (File.Id == Guid.Empty)
+        {
+            this.File.CreationTime = DateTime.Now;
+            this.File.LastUpDate = DateTime.Now;
+            await PostFileObject();
+        }
+        else
+        {
+            this.File.LastUpDate = DateTime.Now;
+            await PutFileObject();
+        }
+        StateHasChanged();
+    }
+
+    private async Task PutFileObject()
+    {
+        var statusInfo1 = await Http.PutAsJsonAsync($"https://localhost:44339/api/FileDescription/{File.Id}", File);
+        var statusInfo2 = await Http.PutAsJsonAsync($"https://localhost:44339/api/FilePayload/file/{File.Id}", File.FileObject);
+    }
+
+    private async Task PostFileObject()
+    {
+        var response = await Http.PostAsJsonAsync($"https://localhost:44339/api/FileDescription/", File);
+
+        var idfile = await response.Content.ReadAsStringAsync();
+        idfile = idfile.Trim('"');
+        var statusInfo = await Http.PostAsJsonAsync($"https://localhost:44339/api/FilePayload/file/{idfile}", File.FileObject);
+    }
+
+    private async Task<FileObjectResponse> GetFileObject(Guid Id)
+    {
+        var fileObject = await Http.GetFromJsonAsync<FileObjectResponse>($"https://localhost:44339/api/FilePayload/file/{Id}");
+        return fileObject;
+    }
+
+    private void UpdateTitle()
+    {
+        param = 1;
+        StateHasChanged();
     }
 }
